--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "typescript-sandbox",
   "version": "1.0.0",
-  "description": "",
+  "description": "TypeScript training repository",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "build:watch": "tsc ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:watch": "tsc --watch",
+    "lint": "eslint **/*.ts",
+    "lint:fix": "eslint --fix **/*.ts",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch --passWithNoTests"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "sakuyacatcat",
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sakuyacatcat/typescript-sandbox.git"
+  },
   "devDependencies": {
     "@types/node": "^20.10.3",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
   }
 }
