--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint **/*.ts",
     "lint:fix": "eslint --fix **/*.ts",
     "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch --passWithNoTests"
+    "test:watch": "jest --watch --passWithNoTests",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "sakuyacatcat",
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
   }
