--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "fastify": "^4.25.2"
   }
 }
