--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.18.2",
     "fastify": "^4.25.2"
   }
 }
